# femtologging

./: .gitignore  AGENTS.md  Makefile  README.md  debugging-plan-20260130-134402.md  debugging-plan-20260130T134229Z.md  pyproject.toml  pyrightconfig.json  typos.local.toml  typos.toml
.github/: dependabot.yml
.rules/: python-00.md  python-00.mdc  python-pyproject.md  python-typing.md  python-typing.mdc
docs/: add-python-bindings.md  adr-001-python-exception-logging.md  adr-002-journald-and-otel-support.md  adr-003-python-stdlib-filter-parity.md  adr-004-batching-optimizations-in-consumer-threads.md  benchmarking-and-optimization-design.md  concurrency-models-in-high-performance-logging.md  configuration-design-roadmap.md  configuration-design.md  configuration-roadmap.md  contents.md  core_features.md  cpython-abi-management-in-rust-with-pyo3.md  dependency-analysis.md  dev-workflow.md  developers-guide.md  documentation-style-guide.md  formatters-and-handlers-rust-port.md  frame-filtering-design.md  logger-hierarchy-and-multi-handler.md  logging-class-overview.md  logging-cpython-picologging-comparison.md  logging-sequence-diagrams.md  multithreading-in-pyo3.md  roadmap.md  rust-doctest-dry-guide.md  rust-extension.md  rust-multithreaded-logging-framework-for-python-design.md  rust-testing-with-rstest-fixtures.md  users-guide.md  v0-1-0-migration-guide.md
rust_extension/: Cargo.toml  clippy.toml  dylint.toml
rust_extension/benches/: config.rs
rust_extension/src/: config.rs  config_tests.rs  convenience_functions.rs  convenience_functions_tests.rs  exception_schema.rs  exception_schema_tests.rs  file_config.rs  file_handler.rs  filter.rs  formatter.rs  frame_filter.rs  frame_filter_py.rs  frame_filter_py_tests.rs  handler.rs  level.rs  lib.rs  log_compat.rs  log_context.rs  log_record.rs  logger.rs  logger_tests.rs  logger_tests_python.rs  logging_macros.rs  macros.rs  manager.rs  python.rs  python_module.rs  rate_limited_warner.rs  rate_limiter.rs  stream_handler.rs  traceback_capture.rs  traceback_capture_graceful_degradation_tests.rs  traceback_capture_tests.rs  traceback_frames.rs  traceback_frames_graceful_degradation_tests.rs  traceback_frames_tests.rs
rust_extension/src/config/: apply.rs  build.rs  config_tests.rs  mod.rs  propagate_tests.rs  py.rs  runtime_mutation.rs  runtime_mutation_tests.rs  test_utils.rs  types.rs
rust_extension/src/config/config_tests/: disable_existing_tests.rs  propagation_tests.rs  submods.rs  validation_tests.rs
rust_extension/src/config/runtime_mutation/: collection_mutation.rs  commit.rs  python_bindings.rs  validation.rs
rust_extension/src/config/types/: python_bindings.rs
rust_extension/src/exception_schema/: filtering.rs  mod.rs  tests.rs
rust_extension/src/exception_schema/tests/: deep_chain_tests.rs  filtering_tests.rs  mod.rs  schema_tests.rs
rust_extension/src/filters/: level_filter.rs  mod.rs  name_filter.rs  python_callback.rs  python_callback_tests.rs  python_callback_validation.rs
rust_extension/src/formatter/: exception.rs  mod.rs  python.rs
rust_extension/src/frame_filter/: mod.rs  tests.rs
rust_extension/src/handlers/: builder_macros.rs  builder_macros_clause_py.rs  builder_macros_clause_rust.rs  builder_macros_tests.rs  common.rs  file_builder.rs  formatter_id.rs  http_builder.rs  mod.rs  rotating.rs  rotating_builder.rs  socket_builder.rs  stream_builder.rs  test_helpers.rs  timed_rotating_builder.rs
rust_extension/src/handlers/common/: mod.rs  python.rs
rust_extension/src/handlers/file/: builder_options.rs  config.rs  drop_warner.rs  flush_ack_tests.rs  flush_tracker_tests.rs  handler_impl.rs  io_utils.rs  lifecycle_tests.rs  mod.rs  policy.rs  test_support.rs  tests.rs  validations.rs  worker.rs  worker_batch_tests.rs
rust_extension/src/handlers/file/tests/: lifecycle_tests.rs  mod.rs  overflow_tests.rs  test_support.rs  worker_tests.rs
rust_extension/src/handlers/http_builder/: python_bindings.rs
rust_extension/src/handlers/rotating/: core.rs  fresh_failure.rs  mod.rs  python.rs  python_bindings.rs  strategy.rs  tests.rs
rust_extension/src/handlers/rotating/tests/: behaviour.rs  concurrency.rs  mod.rs
rust_extension/src/handlers/rotating_builder/: python_bindings.rs
rust_extension/src/handlers/socket_builder/: python_bindings.rs
rust_extension/src/handlers/timed_rotating/: clock.rs  core.rs  core_tests.rs  mod.rs  python.rs  schedule.rs  schedule_tests.rs  test_helpers.rs
rust_extension/src/handlers/timed_rotating_builder/: python_bindings.rs
rust_extension/src/http_handler/: config.rs  filtered.rs  handler.rs  mod.rs  record.rs  response_classification_tests.rs  serialise.rs  serialize.rs  tests.rs  url_encoding.rs  worker.rs  worker_tests.rs
rust_extension/src/logger/: convenience_methods.rs  logger_tests.rs  logger_tests_convenience.rs  logger_tests_drop.rs  logger_tests_helpers.rs  logger_tests_python.rs  logger_tests_shutdown.rs  mod.rs  producer.rs  producer_tests.rs  py_handler.rs  python_helpers.rs  runtime_mutation.rs  worker.rs  worker_tests.rs
rust_extension/src/socket_handler/: backoff.rs  config.rs  handler.rs  mod.rs  serialise.rs  serialize.rs  tests.rs  transport.rs  worker.rs
rust_extension/src/test_utils/: collecting_handler.rs  frame_test_helpers.rs  mod.rs  traceback_test_helpers.rs
rust_extension/src/traceback_capture/: traceback_payload.rs
rust_extension/src/tracing_compat/: mod.rs  python.rs  tests.rs  visitor.rs
rust_extension/tests/: compile_tests.rs  config_level_filter.rs  config_name_filter.rs  file_handler_tests.rs  formatter_tests.rs  handle_expect.rs  handler_tests.rs  log_record_tests.rs  logger_tests.rs  rate_limiter_tests.rs  send_sync.rs  stream_handler_tests.rs
rust_extension/tests/heavy/: loom_file_flush.rs  loom_logger_shared.rs  loom_push.rs  loom_topologies.rs  mod.rs  prop_stream_handler.rs
rust_extension/tests/test_utils/: fixtures.rs  mod.rs  shared_buffer.rs
rust_extension/tests/ui/fail/: invalid_pymodule_return.rs  invalid_pymodule_return.stderr
rust_extension/tests/ui/pass/: pyo3_pymodule.rs  pyo3_signature.rs
(+158 files in other folders)
