[project]
name = "femtologging"
version = "0.1.0"
description = "femtologging package"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "ISC" }
authors = [{ name = "Payton McIntosh", email = "pmcintosh@df12.net" }]
keywords = [
    "logging",
    "pyo3",
    "rust",
    "async",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout",
    "pytest-bdd",
    "syrupy",
    "maturin>=1.9.3",
]

[tool.ruff]
line-length = 88

[tool.uv]
package = true


[build-system]
requires = ["maturin>=1.9.1,<2.0.0"]
build-backend = "maturin"
[tool.maturin]
manifest-path = "rust_extension/Cargo.toml"
# Point to the repository root so package paths resolve correctly when
# specifying python-packages below.
python-source = "."
module-name = "femtologging._femtologging_rs"
python-packages = ["femtologging"]

[tool.pytest.ini_options]
timeout = 30
markers = [
    "concurrency: tests covering threaded behaviour",
    "send_sync: tests covering Send/Sync guarantees",
]
filterwarnings = [
    "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:gherkin.gherkin_line",
]
