[package]
name = "femtologging_rs"
version = "0.1.0"
edition = "2021"
authors = ["Payton McIntosh <pmcintosh@df12.net>"]

[lib]
name = "_femtologging_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", default-features = false, features = ["macros", "auto-initialize"] }
crossbeam-channel = "0.5.15"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
thiserror = "1"

[features]
default = ["extension-module", "python"]
extension-module = ["pyo3/extension-module"]
python = []
test-util = []

[dev-dependencies]
rstest = "0.25"
logtest = "2.0"
tempfile = "^3.20.0"
proptest = "1.0.0"
loom = "0.7.2"
itertools = "0.10"
serial_test = "2"
_femtologging_rs = { path = ".", package = "femtologging_rs", default-features = false, features = ["test-util"] }
static_assertions = "1"
