[package]
name = "femtologging_rs"
version = "0.1.0"
edition = "2024"
authors = ["Payton McIntosh <pmcintosh@df12.net>"]

[lib]
name = "_femtologging_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
delegate = "0.13.4"
pyo3 = { version = "0.25.1", default-features = false, features = ["macros", "auto-initialize"] }
crossbeam-channel = "0.5.15"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
thiserror = "1"
tempfile = "^3.20.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
native-tls = { version = "0.2", features = ["vendored"] }
rand = "0.8"
encoding_rs = "0.8"
ini = { package = "rust-ini", version = "0.21.3" }

[features]
default = ["extension-module", "python", "log-compat"]
extension-module = ["python", "pyo3/extension-module"]
python = []
test-util = []
log-compat = ["python"]

[dev-dependencies]
criterion = "0.5"
rstest = "0.25"
logtest = "2.0"
proptest = "1.0.0"
loom = "0.7.2"
itertools = "0.10"
serial_test = "2"
_femtologging_rs = { path = ".", package = "femtologging_rs", default-features = false, features = ["test-util"] }
static_assertions = "1"
